2006-08-02  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/GtkChoicePeer.java
	(remove): Force event on removing item 0 when it's selected.
	(handleEvent): Always call Choice.selected().
	* java/awt/Choice.java:
	(remove): Simplify and correct.

2006-08-02  Mark Wielaard  <mark@klomp.org>

	PR 28535
	* configure.ac (gconf-peer): Check for gdk-2.0.
	* native/jni/gconf-peer/Makefile.am
	(AM_LDFLAGS): Use GDK_LIBS.
	(AM_CFLAGS): Use GDK_CFLAGS.

2006-08-02  Thomas Minor  <1nocentrabidlamb@sexMagnet.com>

	* java/net/URL.java (getContent(Class[])): Implement.

2006-08-02  Roman Kennke  <kennke@aicas.com>

	PR 27624
	* javax/swing/JMenu.java
	(JMenu()): Removed setting of delay.
	(JMenu(String)): Removed setting of delay.
	(JMenu(Action)): Removed setting of delay.
	(JMenu(String,boolean)): Removed setting of delay.
	(setSelectedHelper): Removed unneeded method.
	(setSelected): Simply set the model state.
	(setPopupMenuVisible): Recognize the popup location
	determined by getPopupMenuOrigin().
	(getPopupMenuOrigin): Recognize the UI properties for
	X and Y offset.
	(menuSelectionChanged): Call setSelected() directly.
	* javax/swing/JPopupMenu.java
	(menuSelectionChanged): If invoker is a JMenu, then delegate
	to that to get the position right.
	* javax/swing/Popup.java
	(LightweightPopup.show): Insert the popup as first component
	in the layer, so that it overlaps it's caller.
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(getPath): Don't include the popup.
	* javax/swing/plaf/basic/BasicMenuUI.java
	(SelectMenuAction): New class. This invokes the popup when
	a menu is selected.
	(installDefaults): Install delay of 200 ms.
	(setupPostTimer): Implemented.
	(MouseInputHandler.mouseClicked): Do nothing here.
	(MouseInputHandler.mouseEntered): Use MenuSelectionManager
	magic to handle the selection. Open the menu via a timer.
	(MouseInputHandler.mousePressed): Use MenuSelectionManager
	magic to handle the selection. Open the menu via a timer.