@@ -1,3 +1,15 @@
+2006-08-03  Sven de Marothy  <sven@physto.se>
+
+	* gnu/java/awt/peer/gtk/ComponentGraphics.java
+	(grab, nativeGrab): New methods.
+	* include/gnu_java_awt_peer_gtk_ComponentGraphics.h
+	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
+	(nativeGrab): New method.
+	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
+	(print): Implement.
+	* java/awt/Component.java
+	(printAll): Should call peer print method.
+	
 2006-08-02  Sven de Marothy  <sven@physto.se>
 
 	* gnu/java/awt/peer/gtk/GtkChoicePeer.java
